syntax = "proto3";

package ci;

option java_package = "ru.yandex.ci.tasklet";
option java_multiple_files = true;
option go_package = "a.yandex-team.ru/ci/tasklet/common/proto;common";

import "google/protobuf/descriptor.proto";

message SandboxResource {
    int64 id = 1;
    string type = 2;
    int64 task_id = 3;
    map<string, string> attributes = 4;
}

